--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ minecraft {
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
             property 'forge.enabledGameTestNamespaces', 'signals'
 
+            // https://github.com/SpongePowered/Mixin/issues/462#issuecomment-791370319
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+
             mods {
                 signals {
                     source sourceSets.main
@@ -79,6 +83,10 @@ minecraft {
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
             args '--mod', 'signals', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
+            // https://github.com/SpongePowered/Mixin/issues/462#issuecomment-791370319
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+
             mods {
                 signals {
                     source sourceSets.main
@@ -95,6 +103,7 @@ repositories {
     maven {
         url "https://cursemaven.com"
     }
+    maven { url 'https://maven.blamejared.com' }
 }
 
 dependencies {
@@ -102,6 +111,9 @@ dependencies {
 
     runtimeOnly fg.deobf("curse.maven:jei-238222:4030307")
     runtimeOnly fg.deobf("curse.maven:theoneprobe-245211:3965693")
+
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-77:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-77")
 }
 
 jar {
